<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".activity.bugly.MyBuglyActivity">


    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvCurrentVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1111111当前版本:" />

            <Button
                android:id="@+id/btnShowToast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/showToast" />

            <Button
                android:id="@+id/btnLoadPatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loadPatch" />

            <Button
                android:id="@+id/btnLoadLibrary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loadLibrary" />

            <Button
                android:id="@+id/btnDownloadPatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userDownload" />

            <Button
                android:id="@+id/btnPatchDownloaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userPatch" />

            <Button
                android:id="@+id/btnCheckUpgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkUpgrade" />

            <Button
                android:id="@+id/btnKillSelf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="退出程序" />

            <TextView
                android:id="@+id/tvVersionInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PATCH  无更新信息" />


            <!--    <TextView
                    android:text="测试"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTest"/>-->

            <Button
                android:id="@+id/btnCheckUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UP 手动检查更新" />

            <Button
                android:id="@+id/btnJumpUpgrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="进入更新Activity" />

            <Button
                android:id="@+id/btnMadeCarsh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="创造Carsh" />

            <Button
                android:id="@+id/btnLoadUpdateInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UP 刷新更新信息" />

            <Button
                android:id="@+id/btnJavaCrash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="JavaCrash" />

            <TextView
                android:id="@+id/tvUpgradeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UP SDK  无更新信息" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
